Added more markdown docs